Add distributions list and detail endponts
